--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Backbase_Assignment</string>
+    <string name="app_name">Smooth Weather</string>
     <string name="action_settings">Settings</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="general_error">Something went wrong, please try again</string>
+    <string name="map_button_text">Add Bookmark</string>
+    <string name="location_permission_denied">Location permission is not granted</string>
+    <string name="add_bookmark_map_fragment_title">New Bookmark</string>
 </resources>
