--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="add_bookmark_map_fragment_title">Add Location</string>
     <string name="no_bookmark_name">Please type the location name here</string>
     <string name="bookmarked">Bookmarked</string>
+    <string name="removed">Removed</string>
+    <string name="snack_bar_undo">UNDO</string>
 </resources>
