--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,11 @@
     <string name="general_error">Something went wrong, please try again</string>
     <string name="location_permission_denied">Location permission is not granted</string>
     <string name="add_bookmark_map_fragment_title">Add Location</string>
+    <string name="weather_forecast_fragment_title">Weather Forecast</string>
     <string name="no_bookmark_name">Please type the location name here</string>
     <string name="bookmarked">Bookmarked</string>
     <string name="removed">Removed</string>
     <string name="snack_bar_undo">UNDO</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
