--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Smooth Weather</string>
     <string name="bookmarks_fragment_title">My Locations</string>
     <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
     <string name="action_add_bookmark">Add location</string>
     <string name="general_error">Something went wrong, please try again</string>
     <string name="location_permission_denied">Location permission is not granted</string>
@@ -11,6 +12,7 @@
     <string name="bookmarked">Bookmarked</string>
     <string name="removed">Removed</string>
     <string name="snack_bar_undo">UNDO</string>
+    <string name="start_by_bookmarking_a_location">Start by bookmarking a location using the + button</string>
 
 
 </resources>
