--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,11 +8,15 @@
     <string name="location_permission_denied">Location permission is not granted</string>
     <string name="add_bookmark_map_fragment_title">Add Location</string>
     <string name="weather_forecast_fragment_title">Weather Forecast</string>
+    <string name="help_fragment_title">Help</string>
     <string name="no_bookmark_name">Please type the location name here</string>
     <string name="bookmarked">Bookmarked</string>
     <string name="removed">Removed</string>
     <string name="snack_bar_undo">UNDO</string>
     <string name="start_by_bookmarking_a_location">Start by bookmarking a location using the + button</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
