--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,14 +15,10 @@
     <string name="removed">Removed</string>
     <string name="snack_bar_undo">UNDO</string>
     <string name="start_by_bookmarking_a_location">Start by bookmarking a location using the + button</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="settings_delete_bookmarks">Delete all Bookmarks</string>
-    <string name="all_bookmarks_deleted">You have deleted all your bookmarks</string>
+    <string name="settings_delete_bookmarks">Delete all Bookmarked Locations</string>
+    <string name="all_bookmarks_deleted">You have deleted all your bookmarked locations</string>
     <string name="delete">DELETE</string>
     <string name="no">NO</string>
-    <string name="settings_delete_bookmarks_dialog_message">Are you sure you want to delete all your bookmarks?</string>
-
-
+    <string name="settings_delete_bookmarks_dialog_message">Are you sure you want to delete all your bookmarked locations?</string>
+    <string name="imperial_system">Imperial System</string>
 </resources>
